[package]
name = "accounting"
version = "0.1.0"
authors = ["silvon <silvonli@gmail.com>"]
edition = "2021"
description = "accounting is a library for money and currency formatting."
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
